Add normalize.css file for consistent styling across browsers

--- a/index.html
+++ b/index.html
@@ -13,5 +13,16 @@
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
     <title>Spots</title>
   </head>
-  <body></body>
+  <body>
+    <div class="page">
+      <header class="header"></header>
+      <main class="content">
+        <section class="profile"></section>
+        <h1>Some Text</h1>
+        <section class="cards"></section>
+        <p>Subtitle</p>
+      </main>
+      <footer class="footer"></footer>
+    </div>
+  </body>
 </html>
