docs: Remove unoptimized images

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <main class="content">
         <section class="profile page__section">
           <img
-            src="./images/avatar.jpg"
+            src="./images/opt-avatar.jpg"
             alt="Bessie Coleman avatar"
             class="profile__avatar"
           />
@@ -40,7 +40,7 @@
           <ul class="cards__list">
             <li class="card">
               <img
-                src="./images/1-photo-by-moritz-feldmann-from-pexels.jpg"
+                src="./images/opt-moritz-feldmann-from-pexels.jpg"
                 alt="Val Thorens"
                 class="card__image"
               />
@@ -51,7 +51,7 @@
             </li>
             <li class="card">
               <img
-                src="./images/2-photo-by-ceiline-from-pexels.jpg"
+                src="./images/opt-ceiline-from-pexels.jpg"
                 alt="Restaurant terrace"
                 class="card__image"
               />
@@ -62,7 +62,7 @@
             </li>
             <li class="card">
               <img
-                src="./images/3-photo-by-tubanur-dogan-from-pexels.jpg"
+                src="./images/opt-tubanur-dogan-from-pexels.jpg"
                 alt="An outdoor cafe"
                 class="card__image"
               />
@@ -73,7 +73,7 @@
             </li>
             <li class="card">
               <img
-                src="./images/4-photo-by-maurice-laschet-from-pexels.jpg"
+                src="./images/opt-maurice-laschet-from-pexels.jpg"
                 alt="A very long bridge, over the forest..."
                 class="card__image"
               />
@@ -86,7 +86,7 @@
             </li>
             <li class="card">
               <img
-                src="./images/5-photo-by-van-anh-nguyen-from-pexels.jpg"
+                src="./images/opt-van-anh-nguyen-from-pexels.jpg"
                 alt="Tunnel with morning light"
                 class="card__image"
               />
@@ -97,7 +97,7 @@
             </li>
             <li class="card">
               <img
-                src="./images/6-photo-by-moritz-feldmann-from-pexels.jpg"
+                src="./images/6-opt-moritz-feldmann-from-pexels.jpg"
                 alt="Mountain house"
                 class="card__image"
               />
