--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
         </section>
       </main>
       <footer class="footer">
-        <p class="footer__text">2025 &copy Spots</p>
+        <p class="footer__text">2025 &copy; Spots</p>
       </footer>
     </div>
     <script>
