--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
       <footer class="footer">
         <p class="footer__text">2025 &copy; Spots</p>
       </footer>
-      <div class="modal">
+      <div class="modal" id="edit-profile-modal">
         <div class="modal__container">
           <button type="button" class="modal__close-btn">
             <img src="images/close_icon.svg" alt="Close-btn" />
@@ -142,7 +142,7 @@
           </form>
         </div>
       </div>
-      <div class="modal">
+      <div class="modal" id="new-post-modal">
         <div class="modal__container">
           <button type="button" class="modal__close-btn">
             <img src="images/close_icon.svg" alt="Close-btn" />
@@ -172,5 +172,6 @@
         </div>
       </div>
     </div>
+    <script src="./scripts/index.js"></script>
   </body>
 </html>
