--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
             <img src="images/close_icon.svg" alt="Close-btn" />
           </button>
           <h2 class="modal__title">Edit profile</h2>
-          <form class="modal__form">
+          <form class="modal__form" novalidate>
             <label for="profile-name-input" class="modal__label"
               >Name
               <input
@@ -69,8 +69,11 @@
                 type="text"
                 class="modal__input"
                 placeholder="Type your name"
+                minlength="2"
+                maxlength="40"
                 required
               />
+              <span id="profile-name-input-error" class="modal__error"></span>
             </label>
             <label for="profile-description-input" class="modal__label"
               >Description
@@ -79,10 +82,16 @@
                 type="text"
                 class="modal__input"
                 placeholder="Describe yourself"
+                minlength="2"
+                maxlength="200"
                 required
               />
+              <span
+                id="profile-description-input-error"
+                class="modal__error"
+              ></span>
             </label>
-            <button type="submit" class="modal__submit-btn">Save</button>
+            <button type="submit" class="modal__button">Save</button>
           </form>
         </div>
       </div>
@@ -92,7 +101,7 @@
             <img src="images/close_icon.svg" alt="Close-btn" />
           </button>
           <h2 class="modal__title">New post</h2>
-          <form class="modal__form">
+          <form class="modal__form" novalidate>
             <label for="card-image-input" class="modal__label"
               >Image link
               <input
@@ -102,6 +111,7 @@
                 placeholder="Paste a link to the picture"
                 required
               />
+              <span id="card-image-input-error" class="modal__error"></span>
             </label>
             <label for="card-caption-input" class="modal__label"
               >Caption
@@ -110,10 +120,13 @@
                 type="text"
                 class="modal__input"
                 placeholder="Type your caption"
+                minlength="2"
+                maxlength="30"
                 required
               />
+              <span id="card-caption-input-error" class="modal__error"></span>
             </label>
-            <button type="submit" class="modal__submit-btn">Save</button>
+            <button type="submit" class="modal__button">Save</button>
           </form>
         </div>
       </div>
@@ -128,6 +141,7 @@
         <p class="modal__caption"></p>
       </div>
     </div>
-    <script src="./scripts/index.js"></script>
   </body>
+  <script src="./scripts/validation.js"></script>
+  <script src="./scripts/index.js"></script>
 </html>
